--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -111,17 +112,16 @@ s.parentNode.insertBefore(b, s);})();
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="company.html#header7-10" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbrib-info mbr-iconfont mbr-iconfont-btn"></span>
                         
-                        About Us
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="company.html#header7-10"><span class="icon54-v2-information mbr-iconfont mbr-iconfont-btn"></span>About</a><a class="text-white dropdown-item display-4" href="ourstory.html#header11-15"><span class="fa fa-history mbr-iconfont mbr-iconfont-btn"></span>Our Story</a><a class="text-white dropdown-item display-4" href="index.html#gallery2-6"><span class="fa fa-product-hunt mbr-iconfont mbr-iconfont-btn"></span>Products</a><a class="text-white dropdown-item display-4" href="portfolio.html#header2-26"><span class="mbri-file mbr-iconfont mbr-iconfont-btn"></span>Portfolio</a><a class="text-white dropdown-item display-4" href="index.html#testimonials4-7"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>Testimonials</a><a class="text-white dropdown-item display-4" href="index.html#pricing-tables2-47"><span class="imind-pricing mbr-iconfont mbr-iconfont-btn"></span>Pricing</a></div>
+                        About</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="company.html#header7-10"><span class="icon54-v2-information mbr-iconfont mbr-iconfont-btn"></span>About</a><a class="text-white dropdown-item display-4" href="ourstory.html#header11-15"><span class="fa fa-history mbr-iconfont mbr-iconfont-btn"></span>Our Story</a><a class="text-white dropdown-item display-4" href="index.html#gallery2-6"><span class="fa fa-product-hunt mbr-iconfont mbr-iconfont-btn"></span>Products</a><a class="text-white dropdown-item display-4" href="portfolio.html#header2-26"><span class="mbri-file mbr-iconfont mbr-iconfont-btn"></span>Portfolio</a><a class="text-white dropdown-item display-4" href="index.html#testimonials4-7"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>Testimonials</a><a class="text-white dropdown-item display-4" href="index.html#pricing-tables2-47"><span class="imind-pricing mbr-iconfont mbr-iconfont-btn"></span>Pricing</a></div>
                 </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="https://blog.seriodesignfx.com" aria-expanded="true" data-toggle="dropdown-submenu"><span class="imind-blogger mbr-iconfont mbr-iconfont-btn"></span>
-                        &nbsp;Blog &nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="blogvideo.html" aria-expanded="false"><span class="mdi-communication-textsms mbr-iconfont mbr-iconfont-btn"></span>Articles</a><a class="text-white dropdown-item display-4" href="https://blog.seriodesignfx.com" aria-expanded="false"><span class="socicon socicon-blogger mbr-iconfont mbr-iconfont-btn"></span>Blog</a><a class="text-white dropdown-item display-4" href="socialmedia.html#content5-1d" aria-expanded="false"><span class="icon54-v2-social-media mbr-iconfont mbr-iconfont-btn"></span>Social Media</a><a class="text-white dropdown-item display-4" href="seriodesigngfxyoutube.html#content5-4f" aria-expanded="false"><span class="icon54-v1-youtube-2 mbr-iconfont mbr-iconfont-btn"></span>YouTube</a></div></li></ul>
+                        &nbsp;Blog&nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="blogvideo.html" aria-expanded="false"><span class="mdi-communication-textsms mbr-iconfont mbr-iconfont-btn"></span>Articles</a><a class="text-white dropdown-item display-4" href="https://blog.seriodesignfx.com" aria-expanded="false"><span class="socicon socicon-blogger mbr-iconfont mbr-iconfont-btn"></span>Blog</a><a class="text-white dropdown-item display-4" href="socialmedia.html#content5-1d" aria-expanded="false"><span class="icon54-v2-social-media mbr-iconfont mbr-iconfont-btn"></span>Social Media</a><a class="text-white dropdown-item display-4" href="seriodesigngfxyoutube.html#content5-4f" aria-expanded="false"><span class="icon54-v1-youtube-2 mbr-iconfont mbr-iconfont-btn"></span>YouTube</a></div></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html#custom-html-2c"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>FREE Consultation!
                 </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/i">build own website</a></section><section class="header2 cid-qHjJM68c3l mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=l8UXhtqV6hU" id="header2-26">
+<section class="engine"><a href="https://mobirise.ws/g">how to create your own website</a></section><section class="header2 cid-qHjJM68c3l mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=l8UXhtqV6hU" id="header2-26">
 
     
 
@@ -352,7 +352,7 @@ s.parentNode.insertBefore(b, s);})();
             <div class="form-1 col-md-8 col-sm-12" data-form-type="formoid">
                 <h1 class="mbr-fonts-style mbr-section-heading display-2">Get in touch</h1>
                 <div data-form-alert="" hidden="">Thanks watch for my phone call!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rFwYMOmazULigd05tphi932HqOZNqG5Y5ielGeWnqCd1pHTVN2Tiolxnh2FkJJ7CW1KtsI1du7og5UkOFDc9i4DDhn/A/f0uGwsrvU3yp76AiKgVesA9aejBM1sG2ILA" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jDV+UoOBIi3v2RQOj0GsJ+/6L+/wHSAY0zm4D1GneBZdHWe9qUUEMosNP16XW8wlDgY7e4r3EVbOju4GDHxdDfFJMdNDmkeX9+pyCHj7dQQr9GgUFrSDFAwCvZGkLZiE" data-form-field="Email">
                     <div class="row input-main">
                         <div class="col-md-6 input-wrap" data-for="name">
                             <input type="text" class="field display-7" name="name" data-form-field="Name" placeholder="Name*" required="" id="name-form2-25">
@@ -446,21 +446,22 @@ s.parentNode.insertBefore(b, s);})();
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/typed/typed.min.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/mbr-popup-btns/mbr-popup-btns.js"></script>
+  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
   <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
   <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
-  <script src="assets/mbr-popup-btns/mbr-popup-btns.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
-  <script src="assets/typed/typed.min.js"></script>
-  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
-  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i></i></a></div>
+    <input name="animation" type="hidden">
   <input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
   </body>
 </html>
