--- a/privacy.html
+++ b/privacy.html
@@ -18,11 +18,12 @@
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -101,17 +102,16 @@ s.parentNode.insertBefore(b, s);})();
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="company.html#header7-10" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbrib-info mbr-iconfont mbr-iconfont-btn"></span>
                         
-                        About Us
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="company.html#header7-10"><span class="icon54-v2-information mbr-iconfont mbr-iconfont-btn"></span>About</a><a class="text-white dropdown-item display-4" href="ourstory.html#header11-15"><span class="fa fa-history mbr-iconfont mbr-iconfont-btn"></span>Our Story</a><a class="text-white dropdown-item display-4" href="index.html#gallery2-6"><span class="fa fa-product-hunt mbr-iconfont mbr-iconfont-btn"></span>Products</a><a class="text-white dropdown-item display-4" href="portfolio.html#header2-26"><span class="mbri-file mbr-iconfont mbr-iconfont-btn"></span>Portfolio</a><a class="text-white dropdown-item display-4" href="index.html#testimonials4-7"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>Testimonials</a><a class="text-white dropdown-item display-4" href="index.html#pricing-tables2-47"><span class="imind-pricing mbr-iconfont mbr-iconfont-btn"></span>Pricing</a></div>
+                        About</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="company.html#header7-10"><span class="icon54-v2-information mbr-iconfont mbr-iconfont-btn"></span>About</a><a class="text-white dropdown-item display-4" href="ourstory.html#header11-15"><span class="fa fa-history mbr-iconfont mbr-iconfont-btn"></span>Our Story</a><a class="text-white dropdown-item display-4" href="index.html#gallery2-6"><span class="fa fa-product-hunt mbr-iconfont mbr-iconfont-btn"></span>Products</a><a class="text-white dropdown-item display-4" href="portfolio.html#header2-26"><span class="mbri-file mbr-iconfont mbr-iconfont-btn"></span>Portfolio</a><a class="text-white dropdown-item display-4" href="index.html#testimonials4-7"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>Testimonials</a><a class="text-white dropdown-item display-4" href="index.html#pricing-tables2-47"><span class="imind-pricing mbr-iconfont mbr-iconfont-btn"></span>Pricing</a></div>
                 </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="https://blog.seriodesignfx.com" aria-expanded="true" data-toggle="dropdown-submenu"><span class="imind-blogger mbr-iconfont mbr-iconfont-btn"></span>
-                        &nbsp;Blog &nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="blogvideo.html" aria-expanded="false"><span class="mdi-communication-textsms mbr-iconfont mbr-iconfont-btn"></span>Articles</a><a class="text-white dropdown-item display-4" href="https://blog.seriodesignfx.com" aria-expanded="false"><span class="socicon socicon-blogger mbr-iconfont mbr-iconfont-btn"></span>Blog</a><a class="text-white dropdown-item display-4" href="socialmedia.html#content5-1d" aria-expanded="false"><span class="icon54-v2-social-media mbr-iconfont mbr-iconfont-btn"></span>Social Media</a><a class="text-white dropdown-item display-4" href="seriodesigngfxyoutube.html#content5-4f" aria-expanded="false"><span class="icon54-v1-youtube-2 mbr-iconfont mbr-iconfont-btn"></span>YouTube</a></div></li></ul>
+                        &nbsp;Blog&nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="blogvideo.html" aria-expanded="false"><span class="mdi-communication-textsms mbr-iconfont mbr-iconfont-btn"></span>Articles</a><a class="text-white dropdown-item display-4" href="https://blog.seriodesignfx.com" aria-expanded="false"><span class="socicon socicon-blogger mbr-iconfont mbr-iconfont-btn"></span>Blog</a><a class="text-white dropdown-item display-4" href="socialmedia.html#content5-1d" aria-expanded="false"><span class="icon54-v2-social-media mbr-iconfont mbr-iconfont-btn"></span>Social Media</a><a class="text-white dropdown-item display-4" href="seriodesigngfxyoutube.html#content5-4f" aria-expanded="false"><span class="icon54-v1-youtube-2 mbr-iconfont mbr-iconfont-btn"></span>YouTube</a></div></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html#custom-html-2c"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>FREE Consultation!
                 </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/q">website creator download</a></section><section class="mbr-section content5 cid-qPjZdnN2lp mbr-parallax-background" id="content5-4c">
+<section class="engine"><a href="https://mobirise.ws/p">open source web page maker</a></section><section class="mbr-section content5 cid-qPjZdnN2lp mbr-parallax-background" id="content5-4c">
 
     
 
@@ -258,16 +258,18 @@ s.parentNode.insertBefore(b, s);})();
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
   <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i></i></a></div>
+    <input name="animation" type="hidden">
   <input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
   </body>
 </html>
