--- a/ourstory.html
+++ b/ourstory.html
@@ -288,17 +288,17 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
         <div class="mbr-row mbr-justify-content-center">            
             <div class="amp-accordion mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8 mbr-col-xl-8 align-left">
                 <div class="accordion-item">
-                    <h2 tabindex="0" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item166.toggleVisibility,amp-accordion-item266.hide,amp-accordion-item366.hide,amp-accordion-item466.hide,amp-accordion-item566.hide,amp-accordion-item666.hide">HONESTY&nbsp;</h2>
-                    <div class="accordion-item-body" id="amp-accordion-item166">
+                    <h2 tabindex="0" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item133.toggleVisibility,amp-accordion-item233.hide,amp-accordion-item333.hide,amp-accordion-item433.hide,amp-accordion-item533.hide,amp-accordion-item633.hide">HONESTY&nbsp;</h2>
+                    <div class="accordion-item-body" id="amp-accordion-item133">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We will answer all questions with a truthful answer within the scope of our experience.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="1" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item166.hide,amp-accordion-item266.toggleVisibility,amp-accordion-item366.hide,amp-accordion-item466.hide,amp-accordion-item566.hide,amp-accordion-item666.hide">
+                    <h2 tabindex="1" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item133.hide,amp-accordion-item233.toggleVisibility,amp-accordion-item333.hide,amp-accordion-item433.hide,amp-accordion-item533.hide,amp-accordion-item633.hide">
                         INTEGRITY</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item266">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item233">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             Our services depend on the trust and effectiveness of our communications. &nbsp;We strive for openess and transparency in our dealings with clients. We will communicate regularly with the client and report on our activities completely
 and truthfully.</p>
@@ -306,35 +306,35 @@ and truthfully.</p>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="2" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item166.hide,amp-accordion-item266.hide,amp-accordion-item366.toggleVisibility,amp-accordion-item466.hide,amp-accordion-item566.hide,amp-accordion-item666.hide">
+                    <h2 tabindex="2" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item133.hide,amp-accordion-item233.hide,amp-accordion-item333.toggleVisibility,amp-accordion-item433.hide,amp-accordion-item533.hide,amp-accordion-item633.hide">
                         SERVICE</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item366">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item333">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We approach all projects and clients realizing that we provide a service. Our objective is to provide the best service and guidance within our experience.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="3" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item166.hide,amp-accordion-item266.hide,amp-accordion-item366.hide,amp-accordion-item466.toggleVisibility,amp-accordion-item566.hide,amp-accordion-item666.hide">TEAM PLAYER</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item466">
+                    <h2 tabindex="3" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item133.hide,amp-accordion-item233.hide,amp-accordion-item333.hide,amp-accordion-item433.toggleVisibility,amp-accordion-item533.hide,amp-accordion-item633.hide">TEAM PLAYER</h2>
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item433">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             Our relationship with the client is as a member of the team. We wear many hats during the relationship and our focus is on the success of the client.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="4" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item166.hide,amp-accordion-item266.hide,amp-accordion-item366.hide,amp-accordion-item466.hide,amp-accordion-item566.toggleVisibility,amp-accordion-item666.hide">
+                    <h2 tabindex="4" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item133.hide,amp-accordion-item233.hide,amp-accordion-item333.hide,amp-accordion-item433.hide,amp-accordion-item533.toggleVisibility,amp-accordion-item633.hide">
                         MASTERY</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item566">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item533">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We strive to master our knowledge and develop intuitively. We are constantly researching and learning looking for new ways to apply our skills.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="5" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item166.hide,amp-accordion-item266.hide,amp-accordion-item366.hide,amp-accordion-item466.hide,amp-accordion-item566.hide,amp-accordion-item666.toggleVisibility">
+                    <h2 tabindex="5" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item133.hide,amp-accordion-item233.hide,amp-accordion-item333.hide,amp-accordion-item433.hide,amp-accordion-item533.hide,amp-accordion-item633.toggleVisibility">
                         LEADERSHIP</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item666">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item633">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We are constantly looking for the shortest distance to accomplish your goals. Simplicity is the key but it does not mean simplication.</p>
                     </div>
@@ -408,8 +408,6 @@ and truthfully.</p>
                     <span class="amp-iconfont fa-youtube fa"><svg width="100%" height="100%" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M1099 1244v211q0 67-39 67-23 0-45-22v-301q22-22 45-22 39 0 39 67zm338 1v46h-90v-46q0-68 45-68t45 68zm-966-218h107v-94h-312v94h105v569h100v-569zm288 569h89v-494h-89v378q-30 42-57 42-18 0-21-21-1-3-1-35v-364h-89v391q0 49 8 73 12 37 58 37 48 0 102-61v54zm429-148v-197q0-73-9-99-17-56-71-56-50 0-93 54v-217h-89v663h89v-48q45 55 93 55 54 0 71-55 9-27 9-100zm338-10v-13h-91q0 51-2 61-7 36-40 36-46 0-46-69v-87h179v-103q0-79-27-116-39-51-106-51-68 0-107 51-28 37-28 116v173q0 79 29 116 39 51 108 51 72 0 108-53 18-27 21-54 2-9 2-58zm-608-913v-210q0-69-43-69t-43 69v210q0 70 43 70t43-70zm719 751q0 234-26 350-14 59-58 99t-102 46q-184 21-555 21t-555-21q-58-6-102.5-46t-57.5-99q-26-112-26-350 0-234 26-350 14-59 58-99t103-47q183-20 554-20t555 20q58 7 102.5 47t57.5 99q26 112 26 350zm-998-1276h102l-121 399v271h-100v-271q-14-74-61-212-37-103-65-187h106l71 263zm370 333v175q0 81-28 118-38 51-106 51-67 0-105-51-28-38-28-118v-175q0-80 28-117 38-51 105-51 68 0 106 51 28 37 28 117zm335-162v499h-91v-55q-53 62-103 62-46 0-59-37-8-24-8-75v-394h91v367q0 33 1 35 3 22 21 22 27 0 57-43v-381h91z"></path></svg></span>
                 </a><a href="https://www.facebook.com/SerioDesignFX/" target="_blank">
                     <span class="amp-iconfont fa-facebook-f fa"><svg width="100%" height="100%" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M1343 12v264h-157q-86 0-116 36t-30 108v189h293l-39 296h-254v759h-306v-759h-255v-296h255v-218q0-186 104-288.5t277-102.5q147 0 228 12z"></path></svg></span>
-                </a><a href="https://plus.google.com/u/0/+Mobirise/posts" target="_blank">
-                    <span class="amp-iconfont fa-google-plus fa"><svg width="100%" height="100%" viewBox="0 0 2304 1792" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M1437 913q0 208-87 370.5t-248 254-369 91.5q-149 0-285-58t-234-156-156-234-58-285 58-285 156-234 234-156 285-58q286 0 491 192l-199 191q-117-113-292-113-123 0-227.5 62t-165.5 168.5-61 232.5 61 232.5 165.5 168.5 227.5 62q83 0 152.5-23t114.5-57.5 78.5-78.5 49-83 21.5-74h-416v-252h692q12 63 12 122zm867-122v210h-209v209h-210v-209h-209v-210h209v-209h210v209h209z"></path></svg></span>
                 </a></div>
             <div class="items-wrap">
                 <ul class="items-list">
@@ -425,8 +423,8 @@ and truthfully.</p>
                             About
                         </a>
                     </li><li class="foot-menu-item mbr-fonts-style display-4">
-                        <a href="contact-serio-design-fx-best-video-social-media.html" class="text-white">
-                            Contact
+                        <a href="company.html" class="text-white">
+                            About
                         </a>
                     </li></ul>
             </div>
